--- a/index.html
+++ b/index.html
@@ -1,14 +1,107 @@
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
+    <title>Cody Hopper</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta key="theme-color" name="theme-color" content="#C0F0C0" />
   </head>
 
   <body>
-    <h1>This is the heading</h1>
-    <p>this is the paragraph</p>
+    <article class="">
+      <header>
+        <h1>Hello, I'm Cody Hopper</h1>
+        <p>Check back on this page later!</p>
+      </header>
+      <ul>
+        <li>Currently a <kbd>Frontend Designer</kbd> at <a href="https://oldspeake.io">Oldspeake.io</a></li>
+        <li>Formerly a <kbd>Digital Designer</kbd> at West Cary Group</li>
+        <li>Before that a <kbd>Print Assistant & Graphic Designer</kbd> at Virginia Commonwealth University</li>
+      </ul>
+    </p><a href="https://codyhopper.com">This</a> is a link to my current portfolio site.<p>
+    </article>
+
+    <template id="">
+      <meter value="50" min="0" max="100"></meter>
+      <progress value="50" max="100">50%</progress>
+
+      <section>
+        <table>
+          <caption>This is table caption</caption>
+          <thead>
+            <th>table cell header</th>
+            <th>table cell header</th>
+            <th>table cell header</th>
+            <th>table cell header</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+            </tr>
+            <tr>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+            </tr>
+            <tr>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+              <td>table cell enclosure</td>
+            </tr>
+          </tfoot>
+        </table>
+      </section>
+    </template>
+
+
+    <aside class="">
+
+    </aside>
+
+
+    <footer>
+      <hr>
+      <h2>About Me</h2>
+      <address>
+        Cody Hopper<br>
+        <small>hello@codyhopper.com<br>
+        codyhopper.com<br></small>
+      </address>
+
+      <p>
+        <details closed>
+          <summary>Where I'm located</summary>
+          <span>Appalachia, Virginia, United States of America</span>
+        </details>
+      </p>
+      <p>
+        <details closed>
+          <summary>Where I Studied</summary>
+          <span>Virginia Commonwealth University, Magna Cum Laude</span>
+        </details>
+      </p>
+      <p>
+        <details closed>
+          <summary>What I Studied</summary>
+          <span>Bachelors of Fine Arts in Graphic Design, Minor in General Business</span>
+        </details>
+      </p>
+
+    </footer>
   </body>
 
 </html>
