--- a/index.html
+++ b/index.html
@@ -6,70 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta key="theme-color" name="theme-color" content="#C0F0C0"/>
+    <link rel="stylesheet" href="./main.css">
     <style media="screen" lang="css">
-      @font-face {
-        font-family: "StandardBook";
-        src: url("./standard-book-webfont.ttf");
-      }
-      :root {
-        /* colors */
-        --black: #2c2c2c;
-        /* layout */
-        --mb1: 2.5rem;
-      }
-      * {
-        font-family: StandardBook, sans-serif;
-        color: var(--black);
-        list-style-type: square;
-      }
-      main {
-        max-width: 750px;
-        margin: 0 auto;
-        padding: 2rem 0.61rem 0;
-      }
-      fieldset {
-        border: thin solid var(--black);
-        margin-bottom: var(--mb1);
-      }
-      legend {
-        outline: thin solid var(--black);
-        padding: 0.25rem;
-      }
-      li {
-        margin-bottom: 0.25rem;
-      }
-      section {
-        margin-bottom: var(--mb1);
-      }
-      p {
-        line-height: 1.54em;
-      }
-      u, a {
-        text-decoration: none
-      }
-      u:hover, a:hover {
-        text-decoration: underline;
-      }
-      td {
-        padding-right: 3rem
-      }
-      footer {
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-between;
-        margin-bottom: var(--mb1);
-      }
-      @media (hover: none) {
-        u, a {
-          text-decoration: underline
-        }
-      }
+
     </style>
   </head>
 
   <body>
     <main>
-    <!-- Basically a massive link board full of stuff that I like and find interesting. It's cool cause people have to move their cursor to find links, which makes the bg change color. -->
+      <!-- Basically a massive link board full of stuff that I like and find interesting. It's cool cause people have to move their cursor to find links, which makes the bg change color. -->
       <h1>Hello, my name’s Cody Hopper.</h1>
       <fieldset>
         <legend>Snapshot</legend>
@@ -87,10 +32,13 @@
             <a href="https://arts.vcu.edu/academics/explore-our-facilities/golab/">Virginia Commonwealth University</a>.
           </li>
           <li>
-            Obsessed with <a href="https://cookieandkate.com/naturally-sweetened-pecan-pie-recipe/">maple</a>-<a href="https://www.kingarthurbaking.com/recipes/maple-doughnuts-recipe">flavored</a> <a href="https://www.thespruceeats.com/maple-pecan-latte-4778954">everything</a>.
+            Obsessed with
+            <a href="https://cookieandkate.com/naturally-sweetened-pecan-pie-recipe/">maple</a>-<a href="https://www.kingarthurbaking.com/recipes/maple-doughnuts-recipe">flavored</a>
+            <a href="https://www.thespruceeats.com/maple-pecan-latte-4778954">everything</a>.
           </li>
           <li>
-            Make sure to check out my current <a href="https://codyhopper.com">portfolio site</a>.
+            Make sure to check out my current
+            <a href="https://codyhopper.com">portfolio site</a>.
           </li>
         </ul>
       </fieldset>
@@ -98,45 +46,6 @@
       <template id="">
         <meter value="50" min="0" max="100"></meter>
         <progress value="50" max="100">50%</progress>
-        <section>
-          <table>
-            <caption>This is table caption</caption>
-            <thead>
-              <th>table cell header</th>
-              <th>table cell header</th>
-              <th>table cell header</th>
-              <th>table cell header</th>
-            </thead>
-            <tbody>
-              <tr>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-              </tr>
-              <tr>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-              </tr>
-              <tr>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-              </tr>
-            </tbody>
-            <tfoot>
-              <tr>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-                <td>table cell enclosure</td>
-              </tr>
-            </tfoot>
-          </table>
-        </section>
         <details closed="closed">
           <summary>Where I'm located</summary>
           <span>Appalachia, Virginia, United States of America</span>
@@ -161,18 +70,17 @@
 
       <section>
         <h2>About Me</h2>
-        <p>I like every aspect of the design process. I feel at my peak when I can deliver a well-considered and researched product. Empathy is part of my design approach as well as my day-to-day life.</p>
+        <p>I like every aspect of the design process. I feel at my peak when I can deliver a well-considered and researched product. Empathy is part of my design approach as well as my day-to-day life. I'm interested in type design, accessibility, and the semantic web.</p>
       </section>
 
       <section>
         <h2>Approach</h2>
-        <p>I begin every project with tons of research. Then my job becomes honing all that information into a cohesive solution. Before anything else, I'm learning.</p>
+        <p>I begin every project with tons of research. Then my job becomes honing all that information into a cohesive solution. Every conversation is an education.</p>
       </section>
 
       <section>
         <h2>Views</h2>
-        <p>Creativity is inherently a biased process. Together let's take a close look at who we're including or excluding, who have we have or have not heard from, who is or isn't invited into this space. I aim to turn that dissatisfaction into a better
-          experience for everyone.</p>
+        <p>Creativity is inherently a biased process. Together let's take a close look at who we're including or excluding, who have we have or have not heard from, who is or isn't invited into this space. Let's turn dissatisfaction into something beautiful and meaningful.</p>
       </section>
 
       <section>
@@ -180,7 +88,8 @@
         <table>
           <tr>
             <td>
-              <u>hello [at] codyhopper.com</u></td>
+              <u>hello [at] codyhopper.com</u>
+            </td>
             <td>
               <a href="https://linkedin.com/in/codyhopper">Linkedin</a>
             </td>
@@ -194,17 +103,21 @@
             </td>
           </tr>
           <tr>
-            <td><u>@codyhopper</u></td>
-            <td><a href="https://github.com/codyhopper">Github</a></td>
+            <td>
+              <u>@codyhopper</u>
+            </td>
+            <td>
+              <a href="https://github.com/codyhopper">Github</a>
+            </td>
           </tr>
         </table>
-
       </div>
     </section>
 
+    <img src="https://web.archive.org/web/20091025041453/http://www.geocities.com/lynzi_n_eel/cuppat.gif" alt="small cup of coffee">
     <footer>
       <small>This site &copy; 2021 Cody Hopper.</small>
-      <small>Set in Standard Book, an Open Source Typface, designed by
+      <small>Set in Standard Book, an open source typface designed by
         <a href="https://github.com/brycewilner">Bryce Wilner</a>.
       </small>
     </footer>
@@ -212,6 +125,5 @@
 
   <script src="./main.js"></script>
 </body>
-
 
 </html>
