add first draft of resume

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
         <ul>
           <li>
             Currently a Frontend Designer at
-            <a href="https://oldspeake.io">Oldspeake.io</a>.
+            <a href="https://oldspeake.io" target="_blank">Oldspeake.io</a>.
           </li>
           <li>
             Formerly a Digital Designer at
-            <a href="https://westcarygroup.com/">West Cary Group</a>.
+            <a href="https://westcarygroup.com/" target="_blank">West Cary Group</a>.
           </li>
           <li>
             Before that a Print Assistant & Graphic Designer at
-            <a href="https://arts.vcu.edu/academics/explore-our-facilities/golab/">Virginia Commonwealth University</a>.
+            <a href="https://arts.vcu.edu/academics/explore-our-facilities/golab/" target="_blank">Virginia Commonwealth University</a>.
           </li>
           <li>
             Obsessed with
-            <a href="https://cookieandkate.com/naturally-sweetened-pecan-pie-recipe/">maple</a>-<a href="https://www.kingarthurbaking.com/recipes/maple-doughnuts-recipe">flavored</a>
-            <a href="https://www.thespruceeats.com/maple-pecan-latte-4778954">everything</a>.
+            <a href="https://cookieandkate.com/naturally-sweetened-pecan-pie-recipe/" target="_blank">maple</a>-<a href="https://www.kingarthurbaking.com/recipes/maple-doughnuts-recipe" target="_blank">flavored</a>
+            <a href="https://www.thespruceeats.com/maple-pecan-latte-4778954" target="_blank">everything</a>.
           </li>
           <li>
             Make sure to check out my current
-            <a href="https://codyhopper.com">portfolio site</a>.
+            <a href="https://codyhopper.com" target="_blank">portfolio site</a> and <a href="./files/plainTextResume_2-13.pdf" target="_blank">resume</a>.
           </li>
         </ul>
       </fieldset>
@@ -60,9 +60,9 @@
       <section>
         <h2>Work</h2>
         <p>I spend a lot of time in
-          <a href="https://atom.io/">code editors</a>
+          <a href="https://atom.io/" target="_blank">code editors</a>
           and
-          <a href="https://www.figma.com/">design programs</a>.</p>
+          <a href="https://www.figma.com/" target="_blank">design programs</a>.</p>
       </section>
 
       <section>
@@ -88,15 +88,15 @@
               <u>hello [at] codyhopper.com</u>
             </td>
             <td>
-              <a href="https://linkedin.com/in/codyhopper">Linkedin</a>
+              <a href="https://linkedin.com/in/codyhopper" target="_blank">Linkedin</a>
             </td>
           </tr>
           <tr>
             <td>
-              <a href="https://codyhopper.com">codyhopper.com</a>
+              <a href="https://codyhopper.com" target="_blank">codyhopper.com</a>
             </td>
             <td>
-              <a href="https://www.are.na/cody-hopper">Are.na</a>
+              <a href="https://www.are.na/cody-hopper" target="_blank">Are.na</a>
             </td>
           </tr>
           <tr>
@@ -104,7 +104,7 @@
               <u>@codyhopper</u>
             </td>
             <td>
-              <a href="https://github.com/codyhopper">Github</a>
+              <a href="https://github.com/codyhopper" target="_blank">Github</a>
             </td>
           </tr>
         </table>
@@ -115,7 +115,7 @@
     <footer>
       <small>This site &copy; 2021 Cody Hopper.</small>
       <small>Set in Standard Book, an open source typface designed by
-        <a href="https://github.com/brycewilner">Bryce Wilner</a>.
+        <a href="https://github.com/brycewilner" target="_blank">Bryce Wilner</a>.
       </small>
     </footer>
   </main>
