--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <img src="https://web.archive.org/web/20091025041453/http://www.geocities.com/lynzi_n_eel/cuppat.gif" alt="small cup of coffee">
     <footer>
       <small>This site &copy; 2021 Cody Hopper.</small>
-      <small>Set in Standard Book, an open source typface designed by
+      <small>Set in Standard Book, an open source typeface designed by
         <a href="https://github.com/brycewilner" target="_blank">Bryce Wilner</a>.
       </small>
     </footer>
