add underline, fix layout, add projects, reorder rgb for bg

--- a/index.html
+++ b/index.html
@@ -35,39 +35,29 @@
           </li>
           <li>
             Make sure to check out my current
-            <a href="https://codyhopper.com" target="_blank">portfolio site</a> and <a href="./files/plainTextResume_2-13.pdf" target="_blank">resume</a>.
+            <a href="https://codyhopper.com" target="_blank">portfolio site</a>.
           </li>
         </ul>
       </fieldset>
 
-      <template id="">
-        <meter value="50" min="0" max="100"></meter>
-        <progress value="50" max="100">50%</progress>
-        <details closed="closed">
-          <summary>Where I'm located</summary>
-          <span>Appalachia, Virginia, United States of America</span>
-        </details>
-        <details closed="closed">
-          <summary>Where I Studied</summary>
-          <span>Virginia Commonwealth University, Magna Cum Laude</span>
-        </details>
-        <details closed="closed">
-          <summary>What I Studied</summary>
-          <span>Bachelors of Fine Arts in Graphic Design, Minor in General Business</span>
-        </details>
-      </template>
-
       <section>
         <h2>Work</h2>
-        <p>I spend a lot of time in
-          <a href="https://atom.io/" target="_blank">code editors</a>
-          and
-          <a href="https://www.figma.com/" target="_blank">design programs</a>.</p>
+        <p>I spend a lot of time in <a href="https://atom.io/" target="_blank">code editors</a>
+          and <a href="https://www.figma.com/" target="_blank">design programs</a>. I've designed, coded, and supported digital products for sustainability, diversity and equality, and social engagement.</p>
+      </section>
+
+      <section>
+        <h2>Projects</h2>
+        <p><a href="https://www.jobvite.com/job-description-grader/" target="_blank">Jobvite JobGrader</a> &horbar; An AI-powered job description grader that helps recruiters overcome inherent biases and hire better.</p>
+        <p><a href="https://truerx.com/" target="_blank">TrueRx</a> &horbar; A pharmaceutical intermediary working to protect the health of your workers while navigating healthcare providers.</p>
+        <p><a href="https://behighlyevolved.com/" target="_blank">Highly Evolved</a> &horbar; Public interest website with a ton of animation and sustainable goals.</p>
+        <p><a href="https://oldspeake.io/ideas-for-breakfast" target="_blank">Ideas for Breakfast</a> &horbar; Micro-site for a short run of breakfast-adjacent podcasts.</p>
+        <p><a href="#" target="_blank">See More</a></p>
       </section>
 
       <section>
         <h2>About Me</h2>
-        <p>I like every aspect of the design process. I feel at my peak when I can deliver a well-considered and researched product. Empathy is part of my design approach as well as my day-to-day life. I'm interested in type design, accessibility, and the semantic web.</p>
+        <p>I live in the Blue Ridge Mountains of Southwest Virginia. I feel at my peak when I can deliver a well-considered and researched product. Empathy is part of my design approach as well as my day-to-day life. I'm interested in type design, accessibility, and the semantic web.</p>
       </section>
 
       <section>
