--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <title>Cody Hopper</title>
-    <!-- If you're reading this, let's talk! Email's at the bottom.-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta key="theme-color" name="theme-color" content="#C0F0C0"/>
@@ -11,7 +11,6 @@
 
   <body>
     <main>
-      <!-- Basically a massive link board full of stuff that I like and find interesting. It's cool cause people have to move their cursor to find links, which makes the bg change color. -->
       <h1>Hello, my name’s Cody Hopper.</h1>
       <fieldset>
         <legend>Snapshot</legend>
@@ -67,41 +66,28 @@
 
       <section>
         <h2>Views</h2>
-        <p>Creativity is inherently a biased process. Together let's take a close look at who we're including or excluding, who have we have or have not heard from, who is or isn't invited into this space. Let's turn dissatisfaction into something beautiful and meaningful.</p>
+        <p>Creativity is inherently a biased process. Together let's take a close look at who we're including or excluding, who have we have or have not heard from, who is or isn't invited into the process. Let's turn dissatisfaction into something beautiful and meaningful.</p>
       </section>
 
       <section>
         <h2>Contact Me</h2>
         <table>
           <tr>
-            <td>
-              <u>hello [at] codyhopper.com</u>
-            </td>
-            <td>
-              <a href="https://linkedin.com/in/codyhopper" target="_blank">Linkedin</a>
-            </td>
+            <td><u>hello [at] codyhopper.com</u></td>
+            <td><a href="https://linkedin.com/in/codyhopper" target="_blank">Linkedin</a></td>
           </tr>
           <tr>
-            <td>
-              <a href="https://codyhopper.com" target="_blank">codyhopper.com</a>
-            </td>
-            <td>
-              <a href="https://www.are.na/cody-hopper" target="_blank">Are.na</a>
-            </td>
+            <td><a href="https://codyhopper.com" target="_blank">codyhopper.com</a></td>
+            <td><a href="https://www.are.na/cody-hopper" target="_blank">Are.na</a></td>
           </tr>
           <tr>
-            <td>
-              <u>@codyhopper</u>
-            </td>
-            <td>
-              <a href="https://github.com/codyhopper" target="_blank">Github</a>
-            </td>
+            <td><u>@codyhopper</u></td>
+            <td><a href="https://github.com/codyhopper" target="_blank">Github</a></td>
           </tr>
         </table>
       </div>
     </section>
 
-    <img src="https://web.archive.org/web/20091025041453/http://www.geocities.com/lynzi_n_eel/cuppat.gif" alt="small cup of coffee">
     <footer>
       <small>This site &copy; 2021 Cody Hopper.</small>
       <small>Set in Standard Book, an open source typeface designed by
@@ -109,6 +95,16 @@
       </small>
     </footer>
   </main>
+
+  <code henryhidden>
+<pre>('—')
+(,(")(")</pre>
+  </code>
+
+  <code henryfound>
+<pre>('O')
+(,(")(")</pre>
+  </code>
 
   <script src="./main.js"></script>
 </body>
