--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
     </footer>
   </main>
 
-  <code henryhidden>
+  <code hidden>
 <pre>('—')
 (,(")(")</pre>
   </code>
 
-  <code henryfound>
+  <code found>
 <pre>('O')
 (,(")(")</pre>
   </code>
