--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             <a href="https://westcarygroup.com/" target="_blank">West Cary Group</a>.
           </li>
           <li>
-            Before that a Print Assistant & Graphic Designer at
-            <a href="https://arts.vcu.edu/academics/explore-our-facilities/golab/" target="_blank">Virginia Commonwealth University</a>.
+            Accessibility-focused with an eye on new and emerging web technologies.
           </li>
           <li>
             Obsessed with
