--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       <section>
         <h2>Projects</h2>
         <p><a href="https://www.jobvite.com/job-description-grader/" target="_blank">Jobvite JobGrader</a> &horbar; An AI-powered job description grader that helps recruiters overcome inherent biases and hire better.</p>
+        <p><a href="/cycletracker" target="_blank">CycleTracker</a> &horbar; A menstruation cycle tracking progressive web app.
+        </p>
         <p><a href="https://truerx.com/" target="_blank">TrueRx</a> &horbar; A pharmaceutical intermediary working to protect the health of your workers while navigating healthcare providers.</p>
         <p><a href="https://behighlyevolved.com/" target="_blank">Highly Evolved</a> &horbar; Public interest website with a ton of animation and sustainable goals.</p>
         <p><a href="https://oldspeake.io/ideas-for-breakfast" target="_blank">Ideas for Breakfast</a> &horbar; Micro-site for a short run of breakfast-adjacent podcasts.</p>
