--- a/index.html
+++ b/index.html
@@ -16,36 +16,32 @@
         <legend>Snapshot</legend>
         <ul>
           <li>
-            Currently a Frontend Designer at
+            Currently a Full Stack Developer at
+            <a href="https://happycog.com" target="_blank">Happy Cog</a>.
+          </li>
+          <li>
+            Formerly a Designer&thinsp;+&thinsp;Developer at
             <a href="https://oldspeake.io" target="_blank">Oldspeake.io</a>.
           </li>
           <li>
-            Formerly a Digital Designer at
+            Before that, a Graphic Designer at
             <a href="https://westcarygroup.com/" target="_blank">West Cary Group</a>.
           </li>
           <li>
-            Accessibility-focused with an eye on new and emerging web technologies.
-          </li>
-          <li>
-            Obsessed with
-            <a href="https://cookieandkate.com/naturally-sweetened-pecan-pie-recipe/" target="_blank">maple</a>-<a href="https://www.kingarthurbaking.com/recipes/maple-doughnuts-recipe" target="_blank">flavored</a>
-            <a href="https://www.thespruceeats.com/maple-pecan-latte-4778954" target="_blank">everything</a>.
-          </li>
-          <li>
-            Make sure to check out my current
-            <a href="https://codyhopper.com" target="_blank">portfolio site</a>.
+            Make sure to check out my
+            <a href="https://codyhopper.com" target="_blank">personal site</a> for more up to date info.
           </li>
         </ul>
       </fieldset>
 
       <section>
         <h2>Work</h2>
-        <p>I spend a lot of time in <a href="https://atom.io/" target="_blank">code editors</a>
-          and <a href="https://www.figma.com/" target="_blank">design programs</a>. I've designed, coded, and supported digital products for sustainability, diversity and equality, and social engagement.</p>
+        <p>I divide my time between code editors and design programs. I've designed, coded, and supported digital products for sustainability, diversity and equality, and social engagement for clients from startups to Fortune 100 companies.</p>
       </section>
 
       <section>
         <h2>Projects</h2>
+        <p><a href="https://www.jobvite.com/job-description-grader/" target="_blank">Givegreen</a> &horbar; A commerce-driven platform that empowers individuals and businesses to invest in climate-minded political candidates for a better tomorrow.</p>
         <p><a href="https://www.jobvite.com/job-description-grader/" target="_blank">Jobvite JobGrader</a> &horbar; An AI-powered job description grader that helps recruiters overcome inherent biases and hire better.</p>
         <p><a href="/cycletracker" target="_blank">CycleTracker</a> &horbar; A menstruation cycle tracking progressive web app.
         </p>
@@ -66,7 +62,7 @@
 
       <section>
         <h2>Views</h2>
-        <p>Creativity is inherently a biased process. Together let's take a close look at who we're including or excluding, who have we have or have not heard from, who is or isn't invited into the process. Let's turn dissatisfaction into something beautiful and meaningful.</p>
+        <p>Creativity is a biased process. Together let's take a close look at who we're including or excluding, who have we have or have not heard from, who is or isn't invited into the process. Let's turn dissatisfaction into something beautiful and meaningful.</p>
       </section>
 
       <section>
@@ -78,7 +74,6 @@
           </tr>
           <tr>
             <td><a href="https://codyhopper.com" target="_blank">codyhopper.com</a></td>
-            <td><a href="https://www.are.na/cody-hopper" target="_blank">Are.na</a></td>
           </tr>
           <tr>
             <td><u>@codyhopper</u></td>
